# plugins-workspace

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  taplo.toml  tsconfig.base.json
plugins/app/: Cargo.toml  README.md  package.json
plugins/app/guest-js/: index.ts
plugins/app/src/: api-iife.js  commands.rs  lib.rs
plugins/authenticator/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/authenticator/guest-js/: index.ts  package.json
plugins/authenticator/src/: api-iife.js  auth.rs  error.rs  lib.rs  u2f.rs
plugins/autostart/: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
plugins/autostart/guest-js/: index.ts  package.json
plugins/autostart/permissions/: default.toml
plugins/autostart/src/: api-iife.js  lib.rs
plugins/barcode-scanner/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  api-iife.js  build.rs  package.json
plugins/barcode-scanner/android/: build.gradle.kts
plugins/barcode-scanner/guest-js/: index.ts
plugins/barcode-scanner/ios/: Package.swift  README.md
plugins/barcode-scanner/permissions/: .schema.json  default.toml
plugins/barcode-scanner/src/: api-iife.js  lib.rs
plugins/biometric/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/biometric/android/: build.gradle.kts
plugins/biometric/guest-js/: index.ts
plugins/biometric/ios/: Package.swift
plugins/biometric/permissions/: default.toml
plugins/biometric/src/: api-iife.js  commands.rs  lib.rs  models.rs
plugins/camera/: .gitignore  Cargo.toml  README.md  build.rs  package.json
plugins/camera/android/: build.gradle.kts
plugins/camera/dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
plugins/camera/guest-js/: index.ts
plugins/camera/ios/: .gitignore  Package.swift  README.md
plugins/camera/src/: api-iife.js  error.rs  lib.rs  models.rs
plugins/cli/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/cli/guest-js/: index.ts
plugins/cli/permissions/: default.toml
plugins/cli/src/: api-iife.js  config.rs  error.rs  lib.rs  parser.rs
plugins/clipboard/: Cargo.toml  README.md  build.rs  package.json
plugins/clipboard-manager/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/clipboard-manager/android/: build.gradle.kts
plugins/clipboard-manager/guest-js/: index.ts
plugins/clipboard-manager/ios/: Package.swift
plugins/clipboard-manager/permissions/: default.toml
plugins/clipboard-manager/src/: api-iife.js  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/clipboard/android/: build.gradle.kts
plugins/clipboard/guest-js/: index.ts
plugins/clipboard/ios/: Package.swift
plugins/clipboard/src/: api-iife.js  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
plugins/deep-link/: CHANGELOG.md  Cargo.toml  LICENSE.spdx  LICENSE_MIT  README.md  api-iife.js  build.rs  package.json  rollup.config.mjs
plugins/deep-link/.test-server/: server.js
plugins/deep-link/android/: build.gradle.kts
plugins/deep-link/guest-js/: index.ts
plugins/deep-link/ios/: Package.swift  README.md
plugins/deep-link/permissions/: .schema.json  default.toml
plugins/deep-link/src/: api-iife.js  commands.rs  config.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  template.desktop  windows.rs
plugins/dialog/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js  rollup.config.mjs
plugins/dialog/android/: .gitignore  build.gradle.kts
plugins/dialog/guest-js/: index.ts  init.ts
plugins/dialog/ios/: Package.swift  README.md
plugins/dialog/permissions/: .schema.json  default.toml
plugins/dialog/src/: api-iife.js  commands.rs  desktop.rs  error.rs  init-iife.js  init.js  lib.rs  mobile.rs  models.rs
plugins/dialog/test/: tauri.conf.json
plugins/event/: Cargo.toml  README.md  package.json
plugins/event/guest-js/: index.ts
plugins/event/src/: commands.rs  lib.rs
plugins/fs/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  api-iife.js  build.rs  package.json  rollup.config.mjs
plugins/fs-extra/: Cargo.toml  README.md  package.json
plugins/fs-extra/guest-js/: index.ts  package.json
plugins/fs-extra/src/: lib.rs
plugins/fs-watch/: Cargo.toml  README.md  package.json  rollup.config.mjs
plugins/fs-watch/guest-js/: index.ts  package.json
plugins/fs-watch/src/: lib.rs
plugins/fs/android/: build.gradle.kts
plugins/fs/dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
plugins/fs/guest-js/: index.ts
plugins/geolocation/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/global-shortcut/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/haptics/: CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/http/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/localhost/: CHANGELOG.md  Cargo.toml  README.md
plugins/log/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  api-iife.js  build.rs  package.json
plugins/nfc/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/notification/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.mjs
plugins/os/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.mjs
plugins/path/: Cargo.toml  build.rs  package.json
plugins/persisted-scope/: CHANGELOG.md  Cargo.toml  README.md
plugins/positioner/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/process/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  api-iife.js  build.rs  package.json
plugins/sharesheet/: Cargo.toml  README.md  api-iife.js  build.rs  package-lock.json  package.json
(+1272 files in other folders)
