[workspace]
members = [
  "plugins/*",
  "plugins/*/tests/*",
  "plugins/*/examples/*/src-tauri",
  "examples/*/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.2", default-features = false }
tauri-build = "2.0.0-rc.2"
tauri-plugin = "2.0.0-rc.2"
tauri-utils = "2.0.0-rc.2"
serde_json = "1"
thiserror = "1"
url = "2"
schemars = "0.8"
dunce = "1"
specta = "=2.0.0-rc.16"
#tauri-specta = "=2.0.0-rc.11"

[workspace.package]
edition = "2021"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
rust-version = "1.75"
repository = "https://github.com/tauri-apps/plugins-workspace"

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[patch.crates-io]
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "489aa0e7936d0e491503f778a83cfc6ed1b28fe7" }
