[package]
name = "tauri-plugin-app"
version = "2.0.0-alpha.2"
description = "APIs to read application metadata and change app visibility on macOS."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
features = [ "tauri/dox" ]

[dependencies]
tauri = { workspace = true }
