[package]
name = "tauri-plugin-cli"
version = "2.0.0-alpha.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = [ "string" ] }
