[package]
name = "tauri-plugin-clipboard"
version = "0.1.0"
#edition.workspace = true
#authors.workspace = true
#license.workspace = true
edition = "2021"

[build-dependencies]
#tauri-build.workspace = true
tauri-build = { path = "../../../tauri/core/tauri-build/" }

[dependencies]
#serde.workspace = true
#serde_json.workspace = true
#tauri = { workspace = true, features = ["clipboard"] }
#log.workspace = true
#thiserror.workspace = true
serde = "1"
thiserror = "1"
tauri = { path = "../../../tauri/core/tauri", features = ["clipboard"] }