[package]
name = "tauri-plugin-fs-watch"
version = "0.0.0"
description = "Watch files and directories for changes."
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
log.workspace = true
thiserror.workspace = true
notify = { version = "6" , features = ["serde"] }
notify-debouncer-mini = { version = "0.4" , features = ["serde"] }
