[package]
name = "tauri-plugin-geolocation"
version = "1.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
links = "tauri-plugin-geolocation"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["specta"] }
log = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true }
#tauri-specta = { workspace = true, features = ["javascript", "typescript"] }
